# Data-Processing-Intermediate

./: CMakeLists.txt  DPI_Syntax.cpp  DPI_Syntax.h  DPI_Types.h  Gc.h  IRGen.cpp  IRGen.h  Interpreter.h  IterableStream.h  Lexer.h  LexerC.cpp  LexerC.h  Math.h  README.md  Tokenizer.cpp  Tokenizer.h  Translator.cpp  Translator.h  Vm.h  grammar.txt  grammer.txt  lang-config.md  main.cpp
files/: test.txt
